Bug 1631825 - Fix the menulist and "Add" button height and alignment in the language dialog on about:preferences, and unify min-height of some elements to 32px r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D72569

UltraBlame original commit: 53a25bfbffc88bbdddb8666c5f95c99caa845efa

--- a/browser/themes/shared/preferences/preferences.inc.css
+++ b/browser/themes/shared/preferences/preferences.inc.css
@@ -747,12 +747,6 @@ button
 {
 min
 -
-height
-:
-30px
-;
-min
--
 width
 :
 150px
@@ -4885,21 +4879,6 @@ collapse
 ;
 }
 menulist
-{
-min
--
-height
-:
-30px
-;
-margin
--
-block
-:
-4px
-;
-}
-menulist
 [
 indicator
 =
@@ -5386,6 +5365,38 @@ width
 ;
 }
 #
+availableLanguages
+#
+availableLocales
+{
+margin
+-
+inline
+-
+start
+:
+0
+;
+}
+#
+availableLanguages
+#
+availableLocales
+#
+activeLanguages
+#
+selectedLocales
+{
+margin
+-
+inline
+-
+end
+:
+4px
+;
+}
+#
 selectedLocales
 >
 richlistitem
@@ -5397,24 +5408,6 @@ inline
 start
 :
 13px
-;
-}
-#
-availableLanguages
-#
-availableLocales
-{
-margin
-:
-0
-;
-margin
--
-inline
--
-end
-:
-4px
 ;
 }
 #
@@ -5444,32 +5437,6 @@ margin
 top
 :
 8px
-;
-}
-.
-add
--
-web
--
-language
-.
-add
--
-browser
--
-language
-{
-margin
-:
-0
-;
-margin
--
-inline
--
-start
-:
-4px
 ;
 }
 .
